<resources>
    <string name="app_name">MyDictionaryV1</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_eng_vn">Eng-Vie</string>
    <string name="menu_vn_eng">Vie-Eng</string>
    <string name="menu_eng_eng">Eng-Eng</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_words">Your words</string>
    <string name="menu_share">Share</string>
    <string name="menu_help">Help</string>
</resources>
