<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_eng_vn"
            android:icon="@drawable/ic_menu_camera"
            android:title="English-Vietnamese" />
        <item
            android:id="@+id/nav_vn_eng"
            android:icon="@drawable/ic_menu_gallery"
            android:title="Vietnamese-English" />
        <item
            android:id="@+id/nav_practice"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Practice" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/menu_favorites" />
        <item
            android:id="@+id/nav_words"
            android:title="@string/menu_words"
            android:icon="@drawable/ic_menu_slideshow"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_help" />
            </group>
        </menu>
    </item>

</menu>
